# Cipherator

./: CMakeLists.txt  LICENSE  README.md  crypto_tool.cpp  crypto_tool.h  encryption.cpp  encryption.h  key_management.cpp  key_management.h  main.cpp  secure_vector.h
.github/workflows/: cmake.yml
